<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_height="match_parent"
        android:layout_width="match_parent">
        <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/logo_small"
                android:layout_marginTop="100dp"
                android:layout_marginBottom="25dp"
                android:id="@+id/iv"

                android:layout_marginRight="155dp"
                android:layout_marginLeft="155dp"
                android:layout_alignParentRight="true"
                android:layout_alignParentLeft="true"/>
        <TextView
                android:id="@+id/tv1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/welcome_to_android"
                android:textSize="20dp"
                android:textColor="#8BC34A"
                android:gravity="center"
                android:textStyle="bold"
                android:layout_below="@+id/iv"/>
        <TextView
                android:id="@+id/tv2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sign_in"
                android:textSize="15dp"
                android:textColor="#9E9E9E"
                android:gravity="center"
                android:layout_below="@+id/tv1"
                android:paddingTop="10dp"/>
        <TextView
                android:id="@+id/tv3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/user_name"
                android:textSize="13dp"
                android:textColor="#9E9E9E"
                android:gravity="left"
                android:paddingLeft="50dp"
                android:layout_marginTop="30dp"
                android:layout_below="@+id/tv2"/>
        <EditText
                android:id="@+id/et1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_username"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:layout_below="@+id/tv3"/>
        <TextView
                android:id="@+id/tv4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pass"
                android:textSize="13dp"
                android:textColor="#9E9E9E"
                android:gravity="left"
                android:paddingLeft="50dp"
                android:layout_marginTop="15dp"
                android:layout_below="@id/et1"/>
        <EditText
                android:id="@+id/et2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_pass"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:layout_below="@+id/tv4"/>
        <Button

                android:id="@+id/signinbtn"
                android:background="@drawable/custom_button"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="55sp"
                android:text="@string/button"
                android:textColor="#FAFAFA"
                android:textStyle="bold"
                android:layout_below="@+id/et2"
                android:layout_marginLeft="55dp"/>
        <TextView
                android:id="@+id/tv5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/signup_ask"
                android:layout_marginTop="20dp"
                android:textSize="12dp"
                android:layout_below="@+id/signinbtn"
                android:layout_marginLeft="135dp"/>

</RelativeLayout>