<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        android:weightSum="10"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:background="#0D47A1"
            android:orientation="vertical"
    >
        <TextView
                android:id="@+id/tv1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:layout_marginTop="50dp"
                android:layout_marginLeft="50dp"
                android:textColor="#FAFAFA"
                android:textStyle="bold"
                android:textSize="20dp"
        />
        <TextView
                android:id="@+id/tv2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/des"
                android:textColor="#FAFAFA"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
        />
    </LinearLayout>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="7"
            android:orientation="vertical">
        <EditText
                android:id="@+id/et1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/b2_hintemail"
                android:layout_marginTop="80dp"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:layout_below="@+id/tv3"/>
        <EditText
                android:id="@+id/et2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/b2_hintpass"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:layout_below="@+id/tv4"/>
        <CheckBox
                android:id="@+id/cb1"
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/b2_checkbox"
                android:layout_marginLeft="50dp"/>
        <Button
                android:id="@+id/loginbtn"
                android:background="@drawable/custom_button_b2"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="25sp"
                android:text="@string/b2_btn"
                android:textColor="#FAFAFA"
                android:layout_below="@+id/et2"
                android:layout_marginLeft="5dp"/>
    </LinearLayout>
</LinearLayout>